name:           hpc-coveralls
version:        0.3.0
synopsis:       Coveralls.io support for Haskell.
description:
  This utility converts and sends Haskell projects hpc code coverage to
  <http://coveralls.io/ coverall.io>.
  .
  /Usage/
  .
  Commands to add to your project .travis.yml when using Travis CI:
  .
  > before_install:
  >   - cabal install hpc-coveralls
  > script:
  >   - cabal configure --enable-tests --enable-library-coverage && cabal build && cabal test
  > after_script:
  >   - hpc-coveralls [options] [test-suite-names]
  .
  Further information can be found in the <https://github.com/guillaume-nargeot/hpc-coveralls README>.

license:        BSD3
license-file:   LICENSE
author:         Guillaume Nargeot
maintainer:     Guillaume Nargeot <guillaume+hackage@nargeot.com>
copyright:      (c) 2014 Guillaume Nargeot
category:       Control
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.8
tested-with:    GHC == 7.6, GHC == 7.8
bug-reports:    https://github.com/guillaume-nargeot/hpc-coveralls
homepage:       https://github.com/guillaume-nargeot/hpc-coveralls/issues

extra-source-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/guillaume-nargeot/hpc-coveralls.git

library
  hs-source-dirs: src
  exposed-modules:
    HpcCoverallsCmdLine,
    Trace.Hpc.Coveralls,
    Trace.Hpc.Coveralls.Config,
    Trace.Hpc.Coveralls.Curl,
    Trace.Hpc.Coveralls.Types,
    Trace.Hpc.Paths,
    Trace.Hpc.Lix
  build-depends:
    aeson,
    base < 5,
    bytestring >= 0.10,
    containers >= 0.5,
    cmdargs >= 0.10,
    curl >= 1.3.8,
    hpc >= 0.6.0.0

executable hpc-coveralls
  hs-source-dirs: src
  main-is:        HpcCoverallsMain.hs
  build-depends:
    aeson,
    base < 5,
    bytestring >= 0.10,
    containers >= 0.5,
    cmdargs >= 0.10,
    curl >= 1.3.8,
    hpc >= 0.6.0.0
  ghc-options:   -Wall -fwarn-tabs

executable run-cabal-test
  hs-source-dirs: src
  main-is:        RunCabalTestMain.hs
  build-depends:
    async >= 2.0.0.0,
    base < 5,
    process,
    regex-posix,
    split
  ghc-options:    -Wall -fwarn-tabs

test-suite test-all
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  main-is:        TestAll.hs
  build-depends:
    base,
    hpc-coveralls,
    HUnit
  ghc-options:    -Wall
