name:           hpc-coveralls
version:        0.9.0
synopsis:       Coveralls.io support for Haskell.
description:
  This utility converts and sends Haskell projects hpc code coverage to
  <http://coveralls.io/ coverall.io>.
  .
  /Usage/
  .
  Below is the simplest example of .travis.yml configuration to use with Travis CI:
  .
  > language: haskell
  > ghc: 7.8
  > script:
  >   - cabal configure --enable-tests --enable-library-coverage && cabal build && cabal test
  > after_script:
  >   - cabal install hpc-coveralls
  >   - hpc-coveralls [options] [test-suite-names]
  .
  Further information can be found in the <https://github.com/guillaume-nargeot/hpc-coveralls README>.

license:        BSD3
license-file:   LICENSE
author:         Guillaume Nargeot
maintainer:     Guillaume Nargeot <guillaume+hackage@nargeot.com>
copyright:      (c) 2014-2015 Guillaume Nargeot
category:       Control
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.8
tested-with:    GHC == 7.6, GHC == 7.8
homepage:       https://github.com/guillaume-nargeot/hpc-coveralls
bug-reports:    https://github.com/guillaume-nargeot/hpc-coveralls/issues

extra-source-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/guillaume-nargeot/hpc-coveralls.git

library
  hs-source-dirs: src
  exposed-modules:
    Trace.Hpc.Coveralls,
    Trace.Hpc.Coveralls.Lix,
    Trace.Hpc.Coveralls.Types,
    Trace.Hpc.Coveralls.Util
  other-modules:
    HpcCoverallsCmdLine,
    Trace.Hpc.Coveralls.Config,
    Trace.Hpc.Coveralls.Curl,
    Trace.Hpc.Coveralls.GitInfo,
    Trace.Hpc.Coveralls.Paths
  build-depends:
    aeson,
    base >= 4 && < 5,
    bytestring >= 0.10,
    containers >= 0.5,
    cmdargs >= 0.10,
    curl >= 1.3.8,
    directory >= 1.2,
    directory-tree >= 0.12,
    hpc >= 0.6,
    process >= 1.1.0.1,
    pureMD5 >= 2.1,
    retry >= 0.5,
    safe >= 0.3,
    split

executable hpc-coveralls
  hs-source-dirs: src
  main-is:        HpcCoverallsMain.hs
  build-depends:
    aeson,
    base >= 4 && < 5,
    bytestring >= 0.10,
    containers >= 0.5,
    cmdargs >= 0.10,
    curl >= 1.3.8,
    directory >= 1.2,
    directory-tree >= 0.12,
    hpc >= 0.6,
    process >= 1.1.0.1,
    pureMD5 >= 2.1,
    retry >= 0.5,
    safe >= 0.3,
    split
  ghc-options:    -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns

executable run-cabal-test
  hs-source-dirs: src
  main-is:        RunCabalTestMain.hs
  build-depends:
    async >= 2.0,
    base >=4 && < 5,
    process,
    regex-posix,
    split
  ghc-options:    -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns

test-suite test-all
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  main-is:        TestAll.hs
  other-modules:
    TestHpcCoverallsLix,
    TestHpcCoverallsUtil
  build-depends:
    base,
    hpc-coveralls,
    HUnit
  ghc-options:    -Wall
